--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+url: https://dedaloestudio.github.io
+baseurl: /dedalo.github.io/
 
 # Site settings
 title: Awesome Title
