--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,16 @@ url: https://dedaloestudio.github.io
 baseurl: /dedalo.github.io/
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Dedalo Estudio
+email: dedaloestudio@domain.com
+description: "Estudio de Arquitectura en A Coruña"
 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: Fernando Barbeito
   pic: 1
-  position: Lead Designer
+  position: Director
   social:
     - title: twitter
       url: #
