--- a/_config.yml
+++ b/_config.yml
@@ -31,12 +31,12 @@ people:
     - title: linkedin
       url: #
 
-- name: Diana Petersen
+- name: Joaquín Villaverde
   pic: 3
-  position: Lead Developer
+  position: Desarrollador Web
   social:
     - title: twitter
-      url: #
+      url: https://twitter.com/jotavillaverde
     - title: facebook
       url: #
     - title: google-plus
